// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FieldRow /> component its snapshot matches story Default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1.5rem;
}

.c0 > .field-wrapper {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin-left: 1.5rem;
}

.c0 > .field-wrapper:first-child {
  margin-left: 0;
}

.c0 .Fieldstyles__Field-sc-1d8f4ec-0 {
  margin-bottom: 0;
}

@media (max-width:672px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c0 > .field-wrapper {
    margin-left: 0;
    margin-top: 1.5rem;
  }

  .c0 > .field-wrapper:first-child {
    margin-top: 0;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="field-wrapper"
      style="flex-basis: 100%;"
    >
      <div
        style="background-color: rgb(238, 238, 238); height: 3em;"
      />
    </div>
    <div
      class="field-wrapper"
      style="flex-basis: 100%;"
    >
      <div
        style="background-color: rgb(238, 238, 238); height: 3em;"
      />
    </div>
    <div
      class="field-wrapper"
      style="flex-basis: 100%;"
    >
      <div
        style="background-color: rgb(238, 238, 238); height: 3em;"
      />
    </div>
  </div>
</div>
`;

exports[`<FieldRow /> component its snapshot matches story DifferentWidths 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1.5rem;
}

.c0 > .field-wrapper {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin-left: 1.5rem;
}

.c0 > .field-wrapper:first-child {
  margin-left: 0;
}

.c0 .Fieldstyles__Field-sc-1d8f4ec-0 {
  margin-bottom: 0;
}

@media (max-width:672px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c0 > .field-wrapper {
    margin-left: 0;
    margin-top: 1.5rem;
  }

  .c0 > .field-wrapper:first-child {
    margin-top: 0;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="field-wrapper"
      style="flex-basis: 20%;"
    >
      <div
        style="background-color: rgb(238, 238, 238); height: 3em;"
      />
    </div>
    <div
      class="field-wrapper"
      style="flex-basis: 45%;"
    >
      <div
        style="background-color: rgb(238, 238, 238); height: 3em;"
      />
    </div>
    <div
      class="field-wrapper"
      style="flex-basis: 35%;"
    >
      <div
        style="background-color: rgb(238, 238, 238); height: 3em;"
      />
    </div>
  </div>
</div>
`;
